--- a/VotePlatform/VotePlatform.csproj
+++ b/VotePlatform/VotePlatform.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\" />
+  </ItemGroup>
+
 </Project>
