--- a/VotePlatform/VotePlatform.csproj
+++ b/VotePlatform/VotePlatform.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
